RESOLVED FIXED213585
Running spellcheck on https://developer.apple.com/forums/thread/650317 hangs the web process
https://bugs.webkit.org/show_bug.cgi?id=213585
Summary Running spellcheck on https://developer.apple.com/forums/thread/650317 hangs ...
Wenson Hsieh
Reported 2020-06-24 17:49:54 PDT
Steps (macOS): 1. Load https://developer.apple.com/forums/thread/650317 2. Click "Reply to this question" (Sign in with an Apple ID if needed) 4. Focus the comment box 5. Press CMD+; to trigger spellchecking. The web content process hangs indefinitely as a result.
Attachments
Patch (7.34 KB, patch)
2020-06-24 18:05 PDT, Wenson Hsieh
no flags
Fix IOS_FAMILY build (7.30 KB, patch)
2020-06-24 18:15 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2020-06-24 17:56:30 PDT
Wenson Hsieh
Comment 2 2020-06-24 18:05:50 PDT Comment hidden (obsolete)
Darin Adler
Comment 3 2020-06-24 18:08:33 PDT
Comment on attachment 402703 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=402703&action=review > Source/WebCore/testing/Internals.idl:383 > + void advanceToNextMisspelling(); How can this be unconditional if the declaration in the .h file is inside an #if?
Wenson Hsieh
Comment 4 2020-06-24 18:10:16 PDT
(In reply to Darin Adler from comment #3) > Comment on attachment 402703 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=402703&action=review > > > Source/WebCore/testing/Internals.idl:383 > > + void advanceToNextMisspelling(); > > How can this be unconditional if the declaration in the .h file is inside an > #if? Indeed, this breaks the IOS_FAMILY build 😅. Trying to fix it now.
Wenson Hsieh
Comment 5 2020-06-24 18:15:50 PDT
Created attachment 402705 [details] Fix IOS_FAMILY build
Wenson Hsieh
Comment 6 2020-06-24 21:29:02 PDT
Comment on attachment 402705 [details] Fix IOS_FAMILY build Thanks for the review!
EWS
Comment 7 2020-06-24 21:42:16 PDT
Committed r263499: <https://trac.webkit.org/changeset/263499> All reviewed patches have been landed. Closing bug and clearing flags on attachment 402705 [details].
Note You need to log in before you can comment on or make changes to this bug.